feat: logging, error handling, swagger
